@@ -1,3 +1,9 @@
+18-April-2012 Michael Babker
+~ [#32] Change file selection popup to use details list
+
+14-April-2012 Michael Babker
++ [#32] Add details list for File Manager
+
 8-April-2012 Michael Babker
 ~ Set MIME type with getID3 instead of params
 ~ Use JSession::checkToken()
